# internet_speed_test

./: .gitignore  README.md  create_speed_test_db.py  define_speed_test_class.py  fastapi_routes.py  get_avg_download_speed.py  get_speed_test_data.py  pyproject.toml  speed_test_prefect_orchestration.py  speed_test_script.py  streamlit_dashboard.py
