[tool.poetry]
name = "internet_speed_test"
version = "0.1.0"
description = ""
authors = ["Anna Vasylytsya"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
speedtest-cli = "^2.1.3"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.32"
prefect = "^2.5.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
