[tool.poetry]
name = "internet_speed_test"
version = "0.2.0"
description = ""
authors = ["Anna Vasylytsya"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
speedtest-cli = "^2.1.3"
psycopg2 = "^2.9.3"
pyyaml = "^6.0"
SQLAlchemy = "^2.0.20"
prefect = "^2.5.0"
fastapi = "^0.104.1"
asyncpg = "^0.29.0"
uvicorn = "^0.24.0.post1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
